Add version info

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -219,7 +219,7 @@ Available priorities are:
 \rule{0.3\linewidth}{0.25pt}
 \scriptsize
 
-by \href{http://www.twitter.com/maldr0id}{@maldr0id}
+v 0.1 by \href{http://www.twitter.com/maldr0id}{@maldr0id}
 
 based on \LaTeX{} cheat sheet by Winston Chang
 
