Formatting issue with sqlite3 settings dump

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -151,8 +151,8 @@ If you want to access the private package files just use \verb!run-as <package> 
 \subsection{Phone info}
 %\settowidth{\MyLen}{\texttt{letterpaper}/\texttt{a4paper} \ }
 \texttt{\$ sqlite3 /data/data/}
-\hspace*{1.7cm}\texttt{com.android.providers.settings}
-\hspace*{1.7cm}\texttt{/databases/settings.db  .dump}
+\hspace*{1.7cm}\texttt{com.android.providers.settings/}
+\hspace*{1.7cm}\texttt{databases/settings.db  .dump}
 %\begin{tabular}{@{}p{\the\MyLen}%
 %                @{}p{\linewidth-\the\MyLen}@{}}
 \begin{tabular}{@{}ll@{}}
