To launch Camera

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -206,6 +206,12 @@ To open the URL:
 \vspace*{1mm}
 
 \texttt{\$ am start -a android.intent.action.VIEW -d URL}
+
+To launch camera:
+
+\vspace*{1mm}
+
+\texttt{\$ am start -a android.media.action.IMAGE\_CAPTURE}
 }
 
 \subsection{Logs}
