Device Admin Settings

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -203,15 +203,16 @@ where \texttt{<INTENT>} is specified with following options:
 \parbox{0.30\textwidth}{
 To open the URL:
 
-\vspace*{1mm}
-
 \texttt{\$ am start -a android.intent.action.VIEW -d URL}
 
 To launch camera:
 
-\vspace*{1mm}
-
 \texttt{\$ am start -a android.media.action.IMAGE\_CAPTURE}
+
+To launch Device Adminstrator Settings:
+
+\texttt{\$ am start -S "'com.android.settings.Settings\$
+DeviceAdminSettingsActivity'"}
 }
 
 \subsection{Logs}
